实现点击cell自动让cell滚动到最顶部，tip：设置contentOffsetBottom

--- a/Lucuber/Views/AddFormula/NameTextViewCell/NameTextViewCell.xib
+++ b/Lucuber/Views/AddFormula/NameTextViewCell/NameTextViewCell.xib
@@ -1,18 +1,36 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="NameTextViewCell" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="NameTextViewCell" id="KGk-i7-Jjw" customClass="NameTextViewCell" customModule="Lucuber" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
                 <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="点击输入公式名称" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="rzr-Se-Dk6">
+                        <rect key="frame" x="20" y="0.0" width="280" height="43"/>
+                        <color key="tintColor" red="0.1960784314" green="0.65490196079999996" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                        <textInputTraits key="textInputTraits"/>
+                    </textField>
+                </subviews>
+                <constraints>
+                    <constraint firstAttribute="trailing" secondItem="rzr-Se-Dk6" secondAttribute="trailing" constant="20" id="Y30-Eu-mnz"/>
+                    <constraint firstItem="rzr-Se-Dk6" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="a4S-Cg-rpj"/>
+                    <constraint firstItem="rzr-Se-Dk6" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="aEr-Ws-eqt"/>
+                    <constraint firstAttribute="bottom" secondItem="rzr-Se-Dk6" secondAttribute="bottom" id="pgJ-P0-z5I"/>
+                    <constraint firstItem="rzr-Se-Dk6" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="uct-ia-Rel"/>
+                </constraints>
             </tableViewCellContentView>
+            <connections>
+                <outlet property="textField" destination="rzr-Se-Dk6" id="mFz-fd-g3A"/>
+            </connections>
         </tableViewCell>
     </objects>
 </document>
