尝试修改一些UI细节

--- a/Lucuber/Views/AddFormula/CategorySeletedCell/CategoryPickViewCell.xib
+++ b/Lucuber/Views/AddFormula/CategorySeletedCell/CategoryPickViewCell.xib
@@ -13,7 +13,7 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="134"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <pickerView contentMode="scaleToFill" semanticContentAttribute="playback" translatesAutoresizingMaskIntoConstraints="NO" id="9Nw-Yr-tBt">
+                    <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9Nw-Yr-tBt">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="134"/>
                     </pickerView>
                 </subviews>
