--- a/Lucuber/ViewControllers/Formula/AddFormula/AddFormula.storyboard
+++ b/Lucuber/ViewControllers/Formula/AddFormula/AddFormula.storyboard
@@ -334,8 +334,8 @@
                                                 </constraints>
                                                 <state key="normal" backgroundImage="placeholder"/>
                                             </button>
-                                            <label clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="公式名称" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4lJ-hd-Hlk">
-                                                <rect key="frame" x="130" y="10" width="80" height="24"/>
+                                            <label clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="名称" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4lJ-hd-Hlk">
+                                                <rect key="frame" x="130" y="10" width="40" height="24"/>
                                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
@@ -348,15 +348,6 @@
                                                 <color key="textColor" white="0.5" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Favorite" translatesAutoresizingMaskIntoConstraints="NO" id="7aw-KN-CGb">
-                                                <rect key="frame" x="143" y="52" width="15" height="15"/>
-                                            </imageView>
-                                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Favorite" translatesAutoresizingMaskIntoConstraints="NO" id="giW-W2-0fG">
-                                                <rect key="frame" x="125" y="52" width="15" height="15"/>
-                                            </imageView>
-                                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Favorite" translatesAutoresizingMaskIntoConstraints="NO" id="ynv-Xi-kP0">
-                                                <rect key="frame" x="161" y="52" width="15" height="15"/>
-                                            </imageView>
                                             <label clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="来自: Hoooward" textAlignment="right" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qDg-kf-Syb">
                                                 <rect key="frame" x="285" y="94" width="75" height="16"/>
                                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -368,11 +359,20 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="三阶" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nmm-Zg-kZS">
-                                                <rect key="frame" x="330" y="10" width="30" height="18"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                <rect key="frame" x="334" y="10" width="26" height="16"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                                <color key="textColor" red="0.29803922770000002" green="0.29803922770000002" blue="0.29803922770000002" alpha="1" colorSpace="calibratedRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
+                                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Favorite" translatesAutoresizingMaskIntoConstraints="NO" id="7aw-KN-CGb">
+                                                <rect key="frame" x="148" y="52" width="15" height="15"/>
+                                            </imageView>
+                                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Favorite" translatesAutoresizingMaskIntoConstraints="NO" id="giW-W2-0fG">
+                                                <rect key="frame" x="130" y="52" width="15" height="15"/>
+                                            </imageView>
+                                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Favorite" translatesAutoresizingMaskIntoConstraints="NO" id="ynv-Xi-kP0">
+                                                <rect key="frame" x="166" y="52" width="15" height="15"/>
+                                            </imageView>
                                         </subviews>
                                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                         <constraints>
@@ -390,9 +390,9 @@
                                         </constraints>
                                     </view>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="公式预览" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RO6-ev-Ejj">
-                                        <rect key="frame" x="15" y="15" width="48" height="15"/>
+                                        <rect key="frame" x="164" y="13" width="48" height="15"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                                        <color key="textColor" red="0.43529411759999997" green="0.4431372549" blue="0.47450980390000003" alpha="1" colorSpace="calibratedRGB"/>
+                                        <color key="textColor" red="0.80000001190000003" green="0.80000001190000003" blue="0.80000001190000003" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
@@ -401,8 +401,8 @@
                                     <constraint firstAttribute="trailing" secondItem="GMf-Kg-esj" secondAttribute="trailing" id="Go4-LP-366"/>
                                     <constraint firstItem="GMf-Kg-esj" firstAttribute="leading" secondItem="rxd-uX-cK3" secondAttribute="leading" id="Mbt-WU-HbH"/>
                                     <constraint firstItem="GMf-Kg-esj" firstAttribute="centerY" secondItem="rxd-uX-cK3" secondAttribute="centerY" constant="10" id="O9M-ML-I1z"/>
-                                    <constraint firstItem="GMf-Kg-esj" firstAttribute="top" secondItem="RO6-ev-Ejj" secondAttribute="bottom" id="UQG-OV-kYi"/>
-                                    <constraint firstItem="RO6-ev-Ejj" firstAttribute="leading" secondItem="rxd-uX-cK3" secondAttribute="leading" constant="15" id="Z9F-C2-K4v"/>
+                                    <constraint firstItem="GMf-Kg-esj" firstAttribute="top" secondItem="RO6-ev-Ejj" secondAttribute="bottom" constant="2" id="UQG-OV-kYi"/>
+                                    <constraint firstItem="RO6-ev-Ejj" firstAttribute="centerX" secondItem="rxd-uX-cK3" secondAttribute="centerX" id="eu1-Ra-kY8"/>
                                     <constraint firstAttribute="height" constant="170" id="tbs-Fh-V6S"/>
                                     <constraint firstItem="GMf-Kg-esj" firstAttribute="centerX" secondItem="rxd-uX-cK3" secondAttribute="centerX" id="vqH-7O-S22"/>
                                 </constraints>
@@ -429,6 +429,9 @@
                     <navigationItem key="navigationItem" id="j4d-id-6b1">
                         <barButtonItem key="leftBarButtonItem" title="取消" id="E14-0o-5o6">
                             <color key="tintColor" red="0.1960784314" green="0.65490196079999996" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <connections>
+                                <action selector="dismiss:" destination="gTn-LB-dxy" id="oI2-rq-N8W"/>
+                            </connections>
                         </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" enabled="NO" title="保存" id="PwQ-Ge-eEh">
                             <color key="tintColor" red="0.1960784314" green="0.65490196079999996" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
