--- a/Lucuber/ViewControllers/Formula/AddFormula/AddFormula.storyboard
+++ b/Lucuber/ViewControllers/Formula/AddFormula/AddFormula.storyboard
@@ -324,7 +324,7 @@
                                 <rect key="frame" x="0.0" y="64" width="375" height="170"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GMf-Kg-esj" userLabel="FormulaView">
-                                        <rect key="frame" x="0.0" y="30" width="375" height="130"/>
+                                        <rect key="frame" x="0.0" y="20" width="375" height="130"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jfq-Bh-2db">
                                                 <rect key="frame" x="15" y="10" width="100" height="100"/>
@@ -389,20 +389,12 @@
                                             <constraint firstItem="qDg-kf-Syb" firstAttribute="bottom" secondItem="jfq-Bh-2db" secondAttribute="bottom" id="zyl-1G-7OB"/>
                                         </constraints>
                                     </view>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="公式预览" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RO6-ev-Ejj">
-                                        <rect key="frame" x="164" y="13" width="48" height="15"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                                        <color key="textColor" red="0.80000001190000003" green="0.80000001190000003" blue="0.80000001190000003" alpha="1" colorSpace="calibratedRGB"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
                                 </subviews>
-                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="0.95197052125506076" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="trailing" secondItem="GMf-Kg-esj" secondAttribute="trailing" id="Go4-LP-366"/>
                                     <constraint firstItem="GMf-Kg-esj" firstAttribute="leading" secondItem="rxd-uX-cK3" secondAttribute="leading" id="Mbt-WU-HbH"/>
-                                    <constraint firstItem="GMf-Kg-esj" firstAttribute="centerY" secondItem="rxd-uX-cK3" secondAttribute="centerY" constant="10" id="O9M-ML-I1z"/>
-                                    <constraint firstItem="GMf-Kg-esj" firstAttribute="top" secondItem="RO6-ev-Ejj" secondAttribute="bottom" constant="2" id="UQG-OV-kYi"/>
-                                    <constraint firstItem="RO6-ev-Ejj" firstAttribute="centerX" secondItem="rxd-uX-cK3" secondAttribute="centerX" id="eu1-Ra-kY8"/>
+                                    <constraint firstItem="GMf-Kg-esj" firstAttribute="centerY" secondItem="rxd-uX-cK3" secondAttribute="centerY" id="O9M-ML-I1z"/>
                                     <constraint firstAttribute="height" constant="170" id="tbs-Fh-V6S"/>
                                     <constraint firstItem="GMf-Kg-esj" firstAttribute="centerX" secondItem="rxd-uX-cK3" secondAttribute="centerX" id="vqH-7O-S22"/>
                                 </constraints>
@@ -445,7 +437,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="DZB-1h-b0b" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="459.5" y="2196.5"/>
+            <point key="canvasLocation" x="439.5" y="1958.5"/>
         </scene>
     </scenes>
     <resources>
