--- a/Lucuber/ViewControllers/Formula/AddFormula/AddFormula.storyboard
+++ b/Lucuber/ViewControllers/Formula/AddFormula/AddFormula.storyboard
@@ -321,89 +321,80 @@
                                 </connections>
                             </tableView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rxd-uX-cK3" userLabel="HeaderView" customClass="HeaderFormulaView" customModule="Lucuber" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="64" width="375" height="150"/>
+                                <rect key="frame" x="0.0" y="64" width="375" height="170"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GMf-Kg-esj" userLabel="FormulaView">
-                                        <rect key="frame" x="0.0" y="10" width="375" height="130"/>
+                                        <rect key="frame" x="10" y="20" width="355" height="130"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jfq-Bh-2db">
-                                                <rect key="frame" x="15" y="10" width="100" height="100"/>
+                                                <rect key="frame" x="15" y="15" width="100" height="100"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="100" id="9HR-ya-1D8"/>
                                                     <constraint firstAttribute="width" constant="100" id="dbw-lk-buS"/>
                                                 </constraints>
                                                 <state key="normal" backgroundImage="placeholder"/>
                                             </button>
-                                            <label clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="名称" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4lJ-hd-Hlk">
-                                                <rect key="frame" x="130" y="10" width="40" height="24"/>
-                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                                <nil key="highlightedColor"/>
-                                            </label>
+                                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" image="Favorite" translatesAutoresizingMaskIntoConstraints="NO" id="ynv-Xi-kP0">
+                                                <rect key="frame" x="316" y="89" width="15" height="15"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="15" id="Ok3-eO-beU"/>
+                                                    <constraint firstAttribute="width" constant="15" id="hsv-jz-rjK"/>
+                                                </constraints>
+                                            </imageView>
                                             <label clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="创建时间: 16-07" textAlignment="right" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iGi-1c-ut1">
-                                                <rect key="frame" x="285" y="79" width="75" height="12"/>
+                                                <rect key="frame" x="123" y="94" width="61" height="10"/>
                                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="8"/>
                                                 <color key="textColor" white="0.5" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="来自: Hoooward" textAlignment="right" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qDg-kf-Syb">
-                                                <rect key="frame" x="285" y="94" width="75" height="16"/>
+                                                <rect key="frame" x="123" y="105" width="61" height="10"/>
                                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="height" constant="16" id="ZxH-zD-Cdy"/>
-                                                </constraints>
-                                                <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="8"/>
                                                 <color key="textColor" white="0.5" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="三阶" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nmm-Zg-kZS">
-                                                <rect key="frame" x="334" y="10" width="26" height="16"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
-                                                <color key="textColor" red="0.29803922770000002" green="0.29803922770000002" blue="0.29803922770000002" alpha="1" colorSpace="calibratedRGB"/>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gVQ-wN-WoR">
+                                                <rect key="frame" x="123" y="71" width="41" height="18"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Favorite" translatesAutoresizingMaskIntoConstraints="NO" id="7aw-KN-CGb">
-                                                <rect key="frame" x="148" y="52" width="15" height="15"/>
-                                            </imageView>
-                                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Favorite" translatesAutoresizingMaskIntoConstraints="NO" id="giW-W2-0fG">
-                                                <rect key="frame" x="130" y="52" width="15" height="15"/>
-                                            </imageView>
-                                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Favorite" translatesAutoresizingMaskIntoConstraints="NO" id="ynv-Xi-kP0">
-                                                <rect key="frame" x="166" y="52" width="15" height="15"/>
-                                            </imageView>
                                         </subviews>
                                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                         <constraints>
-                                            <constraint firstItem="jfq-Bh-2db" firstAttribute="top" secondItem="GMf-Kg-esj" secondAttribute="top" constant="10" id="6nL-tU-E5f"/>
-                                            <constraint firstItem="qDg-kf-Syb" firstAttribute="top" secondItem="iGi-1c-ut1" secondAttribute="bottom" constant="3" id="EBG-zQ-bhc"/>
-                                            <constraint firstAttribute="trailing" secondItem="qDg-kf-Syb" secondAttribute="trailing" constant="15" id="GLr-Ql-g9G"/>
-                                            <constraint firstItem="4lJ-hd-Hlk" firstAttribute="top" secondItem="jfq-Bh-2db" secondAttribute="top" id="PvU-dP-sp3"/>
+                                            <constraint firstItem="iGi-1c-ut1" firstAttribute="leading" secondItem="qDg-kf-Syb" secondAttribute="leading" id="0ua-nU-gOn"/>
+                                            <constraint firstItem="qDg-kf-Syb" firstAttribute="bottom" secondItem="jfq-Bh-2db" secondAttribute="bottom" id="7VO-aA-Mmm"/>
+                                            <constraint firstItem="iGi-1c-ut1" firstAttribute="top" secondItem="gVQ-wN-WoR" secondAttribute="bottom" constant="5" id="OVk-DC-KeA"/>
                                             <constraint firstAttribute="height" constant="130" id="QWq-eT-hFJ"/>
-                                            <constraint firstAttribute="trailing" secondItem="nmm-Zg-kZS" secondAttribute="trailing" constant="15" id="Vo1-J5-TZZ"/>
-                                            <constraint firstItem="iGi-1c-ut1" firstAttribute="trailing" secondItem="qDg-kf-Syb" secondAttribute="trailing" id="Y8y-gx-UJV"/>
-                                            <constraint firstItem="nmm-Zg-kZS" firstAttribute="top" secondItem="jfq-Bh-2db" secondAttribute="top" id="eeh-K3-4W2"/>
+                                            <constraint firstItem="gVQ-wN-WoR" firstAttribute="leading" secondItem="iGi-1c-ut1" secondAttribute="leading" id="Xuo-mK-12k"/>
+                                            <constraint firstItem="qDg-kf-Syb" firstAttribute="top" secondItem="iGi-1c-ut1" secondAttribute="bottom" constant="1" id="aCQ-MO-ta8"/>
+                                            <constraint firstItem="gVQ-wN-WoR" firstAttribute="centerY" secondItem="jfq-Bh-2db" secondAttribute="centerY" id="gEU-Or-Aad"/>
                                             <constraint firstItem="jfq-Bh-2db" firstAttribute="leading" secondItem="GMf-Kg-esj" secondAttribute="leading" constant="15" id="iua-jv-nVu"/>
-                                            <constraint firstItem="4lJ-hd-Hlk" firstAttribute="leading" secondItem="jfq-Bh-2db" secondAttribute="trailing" constant="15" id="rg2-hF-rLW"/>
-                                            <constraint firstItem="qDg-kf-Syb" firstAttribute="bottom" secondItem="jfq-Bh-2db" secondAttribute="bottom" id="zyl-1G-7OB"/>
+                                            <constraint firstItem="jfq-Bh-2db" firstAttribute="centerY" secondItem="GMf-Kg-esj" secondAttribute="centerY" id="jAg-yr-99B"/>
+                                            <constraint firstItem="qDg-kf-Syb" firstAttribute="leading" secondItem="jfq-Bh-2db" secondAttribute="trailing" constant="8" id="qPd-sO-fXI"/>
                                         </constraints>
+                                        <variation key="default">
+                                            <mask key="constraints">
+                                                <exclude reference="gEU-Or-Aad"/>
+                                            </mask>
+                                        </variation>
                                     </view>
                                 </subviews>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="0.95197052125506076" colorSpace="calibratedRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="trailing" secondItem="GMf-Kg-esj" secondAttribute="trailing" id="Go4-LP-366"/>
-                                    <constraint firstItem="GMf-Kg-esj" firstAttribute="leading" secondItem="rxd-uX-cK3" secondAttribute="leading" id="Mbt-WU-HbH"/>
+                                    <constraint firstAttribute="trailing" secondItem="GMf-Kg-esj" secondAttribute="trailing" constant="10" id="Go4-LP-366"/>
+                                    <constraint firstItem="GMf-Kg-esj" firstAttribute="leading" secondItem="rxd-uX-cK3" secondAttribute="leading" constant="10" id="Mbt-WU-HbH"/>
                                     <constraint firstItem="GMf-Kg-esj" firstAttribute="centerY" secondItem="rxd-uX-cK3" secondAttribute="centerY" id="O9M-ML-I1z"/>
-                                    <constraint firstAttribute="height" constant="150" id="tbs-Fh-V6S"/>
-                                    <constraint firstItem="GMf-Kg-esj" firstAttribute="centerX" secondItem="rxd-uX-cK3" secondAttribute="centerX" id="vqH-7O-S22"/>
+                                    <constraint firstAttribute="height" constant="170" id="tbs-Fh-V6S"/>
                                 </constraints>
                                 <connections>
                                     <outlet property="centerBackView" destination="GMf-Kg-esj" id="37d-VG-7iu"/>
                                     <outlet property="creatTimeLabel" destination="iGi-1c-ut1" id="exo-ua-IDQ"/>
                                     <outlet property="creatUserLabel" destination="qDg-kf-Syb" id="Xhx-wk-lom"/>
                                     <outlet property="imageButton" destination="jfq-Bh-2db" id="iyU-RL-7eU"/>
-                                    <outlet property="nameLabel" destination="4lJ-hd-Hlk" id="8bw-cB-fsp"/>
+                                    <outlet property="nameLabel" destination="gVQ-wN-WoR" id="Bct-EQ-WHI"/>
                                 </connections>
                             </view>
                         </subviews>
@@ -437,7 +428,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="DZB-1h-b0b" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="439.5" y="1958.5"/>
+            <point key="canvasLocation" x="403.5" y="1898.5"/>
         </scene>
     </scenes>
     <resources>
